# anyrun

./: Cargo.toml
plugins/hyprland-window/: Cargo.toml  README.md
plugins/hyprland-window/src/: icon.rs  lib.rs  scrubber.rs
