[workspace]
members = [
  "anyrun",
  "anyrun-plugin",
  "anyrun-macros",
  "anyrun-interface",
  "plugins/applications",
  "plugins/hyprland-window",
  "plugins/symbols",
  "plugins/rink",
  "plugins/shell",
  "plugins/kidex",
  "plugins/translate",
  "plugins/randr",
  "plugins/stdin",
  "plugins/dictionary",
  "plugins/websearch",
]
